--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,8 @@ li {
 }
 
 .topButton {
-    background: royalblue;
-    border: 1px solid royalblue;
+    background: #3882f6;
+    border: 1px solid #3882f6;
     color: white;
     padding: 8px 16px;
     border-radius: 8px;
@@ -97,4 +97,101 @@ li {
     columns: #e5e7eb;
 }
 
+.Middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    padding-top: 20px;
+}
 
+.images {
+    display: flex;
+    flex: auto;
+    flex-direction: row;
+    justify-self: space-between;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.top {
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+    padding: 20px;
+}
+
+.Figures {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+}
+
+.FeatureImage {
+    border-radius: 15px;
+    border: 3px solid #3882f6;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.caption {
+    display: block;
+    text-align: center;
+    color: dimgray;
+}
+
+.Quote {
+    background-color: #e5e7eb;
+    padding: 80px;
+}
+
+.QuoteText {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.Sig {
+    color: #1F2937;
+    font-size: 28px;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 90px;
+}
+
+.topAd {
+    font-weight: bold;
+}
+
+.Ad {
+    display: flex;
+    flex-direction: row;
+    background-color: #3882f6;
+    margin: 80px;
+    color: #e5e7eb;
+    padding: 40px;
+    padding-left: 60px;
+    padding-right: 60px;
+    border-radius: 10px;
+}
+
+.text {
+    flex: auto;
+    font-size: 20px;
+}
+
+.botButton {
+    border: 1px solid #e5e7eb;
+    flex: auto;
+    font-weight: bold;
+}
+
+.footer {
+    text-align: center;
+    color: #e5e7eb;
+    font-size: 16px;
+    padding: 30px;
+}
