--- a/styles.css
+++ b/styles.css
@@ -68,11 +68,6 @@ li {
     border-radius: 50%;
 }
 
-.FeatureImage {
-    height: 150px;
-    width: auto;
-}
-
 .topButton {
     background: #3882f6;
     border: 1px solid #3882f6;
@@ -110,6 +105,7 @@ li {
     display: flex;
     flex: auto;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-self: space-between;
     padding-left: 80px;
     padding-right: 80px;
@@ -126,6 +122,7 @@ li {
     display: flex;
     flex: auto;
     flex-direction: column;
+    position: relative;
 }
 
 .FeatureImage {
@@ -134,12 +131,14 @@ li {
     width: 200px;
     height: 200px;
     object-fit: cover;
+    display: block;
 }
 
 .caption {
     display: block;
-    text-align: center;
+    text-align:inherit;
     color: dimgray;
+    caption-side: bottom;
 }
 
 .Quote {
